WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
215656
REGRESSION (
r261407
): Sharing rich links from Twitter/Netflix via Messages is unreliable
https://bugs.webkit.org/show_bug.cgi?id=215656
Summary
REGRESSION (r261407): Sharing rich links from Twitter/Netflix via Messages is...
Chris Dumez
Reported
2020-08-19 10:43:24 PDT
Sharing rick links from Twitter/Netflix via Messages is unreliable since
r261407
. The preview of the link is not always loaded.
Attachments
Patch
(7.37 KB, patch)
2020-08-19 10:58 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(7.37 KB, patch)
2020-08-19 11:04 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2020-08-19 10:43:36 PDT
<
rdar://problem/67087352
>
Chris Dumez
Comment 2
2020-08-19 10:58:21 PDT
Created
attachment 406856
[details]
Patch
Tim Horton
Comment 3
2020-08-19 11:00:21 PDT
Comment on
attachment 406856
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=406856&action=review
> Source/WebKit/ChangeLog:3 > + REGRESSION (
r261407
): Sharing rick links from Twitter/Netflix via Messages is unreliable
s/rick/rich/
Chris Dumez
Comment 4
2020-08-19 11:04:21 PDT
Created
attachment 406857
[details]
Patch
EWS
Comment 5
2020-08-19 11:33:51 PDT
Committed
r265882
: <
https://trac.webkit.org/changeset/265882
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 406857
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug