REGRESSION (r261407): Sharing rich links from Twitter/Netflix via Messages is unreliable https://bugs.webkit.org/show_bug.cgi?id=215656 <rdar://problem/67087352>

Reviewed by Tim Horton.

The WKWebView._clientNavigationsRunAtForegroundPriority SPI was not working for the
MessagesViewService because the view is unparented and PageClient::isApplicationVisible()
would not work return accurate results when [view window] returns nil. It is very
unfortunate to have to rely on the view or the view's window to determine application
visibility so this patch fixes this. We now rely on UIKit's visibility endowment to
determine if the UIProcess is visible, using RunningBoard API. I have verified that the
visibility endowment properly gets propagated from the host application to the view
service when the application is a view service and I have verified that this detects
the MessagesViewService as visible for the use-case at <rdar://problem/67087352>, which
causes the WKWebView._clientNavigationsRunAtForegroundPriority SPI to work as intended.

Note that when the application does not have the visibility endowment, we still allow
it to take a foreground assertion for client navigations if the process is allowed to
run in the background for an extended period of time, according to RunningBoard. This
allows the SPI to work for daemons (like maild) which rely on it.

* UIProcess/PageClient.h:
* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::runJavaScriptInFrameInScriptWorld):
* UIProcess/ios/PageClientImplIOS.h:
* UIProcess/ios/PageClientImplIOS.mm:
(WebKit::PageClientImpl::canTakeForegroundAssertions):
(WebKit::PageClientImpl::isApplicationVisible): Deleted.
* UIProcess/ios/WebPageProxyIOS.mm:
(WebKit::WebPageProxy::shouldForceForegroundPriorityForClientNavigation const):


Canonical link: https://commits.webkit.org/228418@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265882 268f45cc-cd09-0410-ab3c-d52691b4dbfc