Source/WebKit/UIProcess/PageClient.h
@@ -204,8 +204,7 @@ public:
     virtual bool isViewVisible() = 0;
 
 #if PLATFORM(IOS_FAMILY)
-    // Return whether the application is visible.
-    virtual bool isApplicationVisible() = 0;
+    virtual bool canTakeForegroundAssertions() = 0;
 #endif
 
     // Return whether the view is visible, or occluded by another window.
